force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Payment_period__c.field-meta.xml
<CustomField>
    <fullName>Payment_period__c</fullName>
    <label>Payment period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lump sum</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>