force-app/main/default/objects/FinServ__FinancialAccount__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>To record the date and time the record was created in the nova service
Updated by nova service</description>
    <label>Platform created date time</label>
    <type>DateTime</type>
</CustomField>