force-app/main/default/objects/FinServ__FinancialAccount__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>To record the date and time the record was last modified in NOVA Service. This could either be the colleague in Salesforce or client on the portal.</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>