force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Pre_LOA_notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_LOA_notes__c</fullName>
    <description>Information that the client can view on their portal</description>
    <inlineHelpText>Only add information to this field if you are comfortable that the client should view this on their portal</inlineHelpText>
    <label>Customer Visible Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>