force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Provider_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contact_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fulfilment Provider</description>
    <label>Provider Contact Details</label>
    <referenceTo>Provider_Database__c</referenceTo>
    <relationshipLabel>Financial Products (Provider)</relationshipLabel>
    <relationshipName>Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>