force-app/main/default/objects/FinServ__FinancialAccount__c/fields/ProviderContact__c.field-meta.xml
<CustomField>
    <fullName>ProviderContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to provider</description>
    <label>Provider Contact</label>
    <referenceTo>ProviderContact__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>FinancialProducts</relationshipName>
    <type>Lookup</type>
</CustomField>