force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Public_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Provider_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Public Provider Name</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>