force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Public_Sector_Transfer_Club_Member__c.field-meta.xml
<CustomField>
    <fullName>Public_Sector_Transfer_Club_Member__c</fullName>
    <inlineHelpText>Is the scheme a member of the Public Sector Transfer Club?&quot; If yes, triage is not required. If no (all private sector schemes) then triage is required</inlineHelpText>
    <label>Public Sector Transfer Club Member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>