force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Registered_Contact__c.field-meta.xml
<CustomField>
    <fullName>Registered_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_record_type_mimic__c</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registered Contact (JISA)</relationshipLabel>
    <relationshipName>Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>