force-app/main/default/objects/FinServ__FinancialAccount__c/fields/RegisteredContact__c.field-meta.xml
<CustomField>
    <fullName>RegisteredContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For junior products, this is the adult registered on the account</description>
    <label>Registered contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Products (Registered contact)</relationshipLabel>
    <relationshipName>Financial_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>