force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Regular_withdrawal_amount__c.field-meta.xml
<CustomField>
    <fullName>Regular_withdrawal_amount__c</fullName>
    <label>Regular withdrawal amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>