force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Regular_withdrawal_frequency__c.field-meta.xml
<CustomField>
    <fullName>Regular_withdrawal_frequency__c</fullName>
    <label>Regular withdrawal frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>