force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Sortable_Data_Grid_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Sortable_Data_Grid_Grouping__c</fullName>
    <label>Sortable Data Grid Grouping</label>
    <length>2</length>
    <type>Text</type>
</CustomField>