force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Source_of_valuation__c.field-meta.xml
<CustomField>
    <fullName>Source_of_valuation__c</fullName>
    <label>Source of valuation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>