force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Stop_Internal_User_Update__c.field-meta.xml
<CustomField>
    <fullName>Stop_Internal_User_Update__c</fullName>
    <description>A change to this field signals that the update, or creation of the record, was triggered from the fact find. As such the Internal User Update nodes in the process builder should not fire.</description>
    <label>Stop Internal User Update</label>
    <type>DateTime</type>
</CustomField>