force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <inlineHelpText>This is what the client will see under the highlevel  &quot;Type&quot; field in the portal.</inlineHelpText>
    <label>Portal Display Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Product_Subtypes</valueSetName>
    </valueSet>
</CustomField>