force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Term_years__c.field-meta.xml
<CustomField>
    <fullName>Term_years__c</fullName>
    <inlineHelpText>Only for term products</inlineHelpText>
    <label>Term period (years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>