force-app/main/default/objects/FinServ__FinancialAccount__c/fields/TransferFormFormat__c.field-meta.xml
<CustomField>
    <fullName>TransferFormFormat__c</fullName>
    <description>Indicates the method transfer forms must be sent to the provider of this policy if it were to be transferred to us</description>
    <label>Transfer form format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Paper forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>