force-app/main/default/objects/FinServ__FinancialAccount__c/fields/TransferProcess__c.field-meta.xml
<CustomField>
    <fullName>TransferProcess__c</fullName>
    <description>For pensions, indicates whether this product can be transferred using the Origo process</description>
    <label>Transfer process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Origo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>