force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Uncrystallised__c.field-meta.xml
<CustomField>
    <fullName>Uncrystallised__c</fullName>
    <label>Uncrystallised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>