force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Visual_grouping__c.field-meta.xml
<CustomField>
    <fullName>Visual_grouping__c</fullName>
    <description>1 - Cash
2 - Unwrapped
3 - ISA
4 - Insurance Bond
5 - Defined Contribution
6 - Defined Benefit 
7 - Tax efficient alternatives
8 - Protection</description>
    <label>Visual grouping</label>
    <length>2</length>
    <type>Text</type>
</CustomField>