force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Family_Income_Benefit.recordType-meta.xml
<RecordType>
    <fullName>Family_Income_Benefit</fullName>
    <active>true</active>
    <label>Family Income Benefit</label>
</RecordType>