force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__BankingAccount.recordType-meta.xml
<RecordType>
    <fullName>FinServ__BankingAccount</fullName>
    <active>false</active>
    <description>Bank accounts such as savings, checking, and credit</description>
    <label>Bank Account</label>
</RecordType>