force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__General.recordType-meta.xml
<RecordType>
    <fullName>FinServ__General</fullName>
    <active>false</active>
    <description>General financial accounts</description>
    <label>General Account</label>
</RecordType>