force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__HELOC.recordType-meta.xml
<RecordType>
    <fullName>FinServ__HELOC</fullName>
    <active>false</active>
    <description>Represents a line of credit secured by equity in real property.</description>
    <label>HELOC</label>
</RecordType>