force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__InsurancePolicy.recordType-meta.xml
<RecordType>
    <fullName>FinServ__InsurancePolicy</fullName>
    <active>false</active>
    <description>Insurance policies</description>
    <label>Insurance Policy</label>
</RecordType>