force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__InvestmentAccount.recordType-meta.xml
<RecordType>
    <fullName>FinServ__InvestmentAccount</fullName>
    <active>false</active>
    <description>Investment accounts such as brokerage accounts</description>
    <label>Investment Account</label>
</RecordType>