force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__Mortgage.recordType-meta.xml
<RecordType>
    <fullName>FinServ__Mortgage</fullName>
    <active>false</active>
    <description>Represents a type of loan for financing a purchase of real property.</description>
    <label>Mortgage</label>
</RecordType>