force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FinServ__TreasuryService.recordType-meta.xml
<RecordType>
    <fullName>FinServ__TreasuryService</fullName>
    <active>false</active>
    <description>Accounts that provide transaction or investment services for chief financial officers or treasurers.</description>
    <label>Treasury Service</label>
</RecordType>