force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Accident_Sickness_Unemployment.recordType-meta.xml
<RecordType>
    <fullName>FP_Accident_Sickness_Unemployment</fullName>
    <active>true</active>
    <label>ASU</label>
</RecordType>