force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Annuity.recordType-meta.xml
<RecordType>
    <fullName>FP_Annuity</fullName>
    <active>true</active>
    <label>Annuity</label>
</RecordType>