force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_AVC.recordType-meta.xml
<RecordType>
    <fullName>FP_AVC</fullName>
    <active>true</active>
    <label>AVC</label>
</RecordType>