force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_BPR.recordType-meta.xml
<RecordType>
    <fullName>FP_BPR</fullName>
    <active>true</active>
    <label>BPR</label>
</RecordType>