force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_BPR_ISA.recordType-meta.xml
<RecordType>
    <fullName>FP_BPR_ISA</fullName>
    <active>true</active>
    <label>BPR ISA</label>
</RecordType>