force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Cash_ISA.recordType-meta.xml
<RecordType>
    <fullName>FP_Cash_ISA</fullName>
    <active>true</active>
    <label>Cash ISA</label>
</RecordType>