force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Current_Account.recordType-meta.xml
<RecordType>
    <fullName>FP_Current_Account</fullName>
    <active>false</active>
    <label>Current Account</label>
</RecordType>