force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Defined_Benefit_Pension.recordType-meta.xml
<RecordType>
    <fullName>FP_Defined_Benefit_Pension</fullName>
    <active>true</active>
    <label>DB Pension</label>
</RecordType>