force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Direct_equity_holding.recordType-meta.xml
<RecordType>
    <fullName>FP_Direct_equity_holding</fullName>
    <active>true</active>
    <label>Direct equity holding</label>
</RecordType>