force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Direct_Gilt_bond_holding.recordType-meta.xml
<RecordType>
    <fullName>FP_Direct_Gilt_bond_holding</fullName>
    <active>true</active>
    <label>Direct Gilt/bond holding</label>
</RecordType>