force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_EIS.recordType-meta.xml
<RecordType>
    <fullName>FP_EIS</fullName>
    <active>true</active>
    <label>EIS</label>
</RecordType>