force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Endowment.recordType-meta.xml
<RecordType>
    <fullName>FP_Endowment</fullName>
    <active>true</active>
    <label>Endowment</label>
</RecordType>