force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Fixed_Term_Deposit.recordType-meta.xml
<RecordType>
    <fullName>FP_Fixed_Term_Deposit</fullName>
    <active>false</active>
    <description>RT Fixed term deposit</description>
    <label>Fixed Term Deposit</label>
</RecordType>