force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_General_Investment_Account_GIA.recordType-meta.xml
<RecordType>
    <fullName>FP_General_Investment_Account_GIA</fullName>
    <active>true</active>
    <label>GIA</label>
</RecordType>