force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Group_Personal_Pension_GPP.recordType-meta.xml
<RecordType>
    <fullName>FP_Group_Personal_Pension_GPP</fullName>
    <active>true</active>
    <label>GPP</label>
</RecordType>