force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Income_Protection.recordType-meta.xml
<RecordType>
    <fullName>FP_Income_Protection</fullName>
    <active>true</active>
    <label>Income Protection</label>
</RecordType>