force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Life_Cover_CIC_Term.recordType-meta.xml
<RecordType>
    <fullName>FP_Life_Cover_CIC_Term</fullName>
    <active>true</active>
    <label>Life Cover &amp; CIC (Term)</label>
</RecordType>