force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Life_Cover_Term.recordType-meta.xml
<RecordType>
    <fullName>FP_Life_Cover_Term</fullName>
    <active>true</active>
    <label>Life Cover (Term)</label>
</RecordType>