force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Life_Cover_Whole_of_Life.recordType-meta.xml
<RecordType>
    <fullName>FP_Life_Cover_Whole_of_Life</fullName>
    <active>true</active>
    <label>Life Cover (Whole of Life)</label>
</RecordType>