force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Occupational_Company_Pension_Scheme.recordType-meta.xml
<RecordType>
    <fullName>FP_Occupational_Company_Pension_Scheme</fullName>
    <active>true</active>
    <label>Occupational/Company Pension</label>
</RecordType>