force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Offshore_Bond.recordType-meta.xml
<RecordType>
    <fullName>FP_Offshore_Bond</fullName>
    <active>true</active>
    <label>Offshore Bond</label>
</RecordType>