force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Onshore_Bond.recordType-meta.xml
<RecordType>
    <fullName>FP_Onshore_Bond</fullName>
    <active>true</active>
    <label>Onshore Bond</label>
</RecordType>