force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Peer_Peer_Innovative_finance.recordType-meta.xml
<RecordType>
    <fullName>FP_Peer_Peer_Innovative_finance</fullName>
    <active>true</active>
    <label>Peer-Peer / Innovative finance</label>
</RecordType>