force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Personal_Pension_PP.recordType-meta.xml
<RecordType>
    <fullName>FP_Personal_Pension_PP</fullName>
    <active>true</active>
    <label>Personal Pension (PP)</label>
</RecordType>