force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Pre_LOA_Defined_Benefit_Pension.recordType-meta.xml
<RecordType>
    <fullName>FP_Pre_LOA_Defined_Benefit_Pension</fullName>
    <active>true</active>
    <label>Pre LOA DB Pension</label>
</RecordType>