force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Pre_LOA_Investment.recordType-meta.xml
<RecordType>
    <fullName>FP_Pre_LOA_Investment</fullName>
    <active>true</active>
    <label>Pre LOA General Investment</label>
</RecordType>