force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Pre_LOA_Protection.recordType-meta.xml
<RecordType>
    <fullName>FP_Pre_LOA_Protection</fullName>
    <active>true</active>
    <label>Pre LOA Protection</label>
</RecordType>