force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Private_Medical.recordType-meta.xml
<RecordType>
    <fullName>FP_Private_Medical</fullName>
    <active>true</active>
    <label>Private Medical</label>
</RecordType>