force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Retirement_Annuity_Contract_RAC.recordType-meta.xml
<RecordType>
    <fullName>FP_Retirement_Annuity_Contract_RAC</fullName>
    <active>true</active>
    <label>Retirement Annuity Contract</label>
</RecordType>