force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_SASS.recordType-meta.xml
<RecordType>
    <fullName>FP_SASS</fullName>
    <active>true</active>
    <label>SASS</label>
</RecordType>