force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Scheme_Pension.recordType-meta.xml
<RecordType>
    <fullName>FP_Scheme_Pension</fullName>
    <active>true</active>
    <label>Scheme Pension</label>
</RecordType>