force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Section_32.recordType-meta.xml
<RecordType>
    <fullName>FP_Section_32</fullName>
    <active>true</active>
    <label>Section 32</label>
</RecordType>