force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_SEIS.recordType-meta.xml
<RecordType>
    <fullName>FP_SEIS</fullName>
    <active>true</active>
    <label>SEIS</label>
</RecordType>