force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_SIPP.recordType-meta.xml
<RecordType>
    <fullName>FP_SIPP</fullName>
    <active>true</active>
    <label>SIPP</label>
</RecordType>