force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Stakeholder_Pension.recordType-meta.xml
<RecordType>
    <fullName>FP_Stakeholder_Pension</fullName>
    <active>true</active>
    <label>Stakeholder Pension</label>
</RecordType>