force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Stocks_Shares_ISA.recordType-meta.xml
<RecordType>
    <fullName>FP_Stocks_Shares_ISA</fullName>
    <active>true</active>
    <label>Stocks &amp; Shares ISA</label>
</RecordType>