force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Structured_Product.recordType-meta.xml
<RecordType>
    <fullName>FP_Structured_Product</fullName>
    <active>true</active>
    <label>Structured Product</label>
</RecordType>