force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Structured_Product_ISA.recordType-meta.xml
<RecordType>
    <fullName>FP_Structured_Product_ISA</fullName>
    <active>true</active>
    <label>Structured Product ISA</label>
</RecordType>