force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_VCT.recordType-meta.xml
<RecordType>
    <fullName>FP_VCT</fullName>
    <active>true</active>
    <label>VCT</label>
</RecordType>