force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_VCT_ISA.recordType-meta.xml
<RecordType>
    <fullName>FP_VCT_ISA</fullName>
    <active>true</active>
    <label>VCT ISA</label>
</RecordType>