force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/FP_Whole_of_Life_Critical_Illness_Cover.recordType-meta.xml
<RecordType>
    <fullName>FP_Whole_of_Life_Critical_Illness_Cover</fullName>
    <active>true</active>
    <label>Life Cover (Whole of Life &amp; CIC)</label>
</RecordType>