force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Junior_ISA.recordType-meta.xml
<RecordType>
    <fullName>Junior_ISA</fullName>
    <active>true</active>
    <label>Junior ISA</label>
</RecordType>