force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Junior_SIPP.recordType-meta.xml
<RecordType>
    <fullName>Junior_SIPP</fullName>
    <active>true</active>
    <label>Junior SIPP</label>
</RecordType>