force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Offset_Mortgage_Cash_Account.recordType-meta.xml
<RecordType>
    <fullName>Offset_Mortgage_Cash_Account</fullName>
    <active>false</active>
    <label>Offset Mortgage Cash Account</label>
</RecordType>