force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Peer_Peer_Innovative_finance_ISA.recordType-meta.xml
<RecordType>
    <fullName>Peer_Peer_Innovative_finance_ISA</fullName>
    <active>true</active>
    <label>Peer-Peer / Innovative finance ISA</label>
</RecordType>