force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Pre_LOA_Defined_Contribution_Pension.recordType-meta.xml
<RecordType>
    <fullName>Pre_LOA_Defined_Contribution_Pension</fullName>
    <active>true</active>
    <label>Pre-LOA DC Pension</label>
</RecordType>