force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Pre_LOA_ISA.recordType-meta.xml
<RecordType>
    <fullName>Pre_LOA_ISA</fullName>
    <active>true</active>
    <label>Pre LOA ISA</label>
</RecordType>