force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Premium_Bond.recordType-meta.xml
<RecordType>
    <fullName>Premium_Bond</fullName>
    <active>false</active>
    <label>Premium Bonds (NS&amp;I)</label>
</RecordType>