force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/RelevantLifeCover.recordType-meta.xml
<RecordType>
    <fullName>RelevantLifeCover</fullName>
    <active>true</active>
    <description>Life cover paid for by a business</description>
    <label>Relevant Life Cover</label>
</RecordType>