force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Trust.recordType-meta.xml
<RecordType>
    <fullName>Trust</fullName>
    <active>true</active>
    <label>Trust</label>
</RecordType>