force-app/main/default/objects/FinServ__FinancialAccount__c/validationRules/AccountNumberFormattedCorrectly.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNumberFormattedCorrectly</fullName>
    <active>true</active>
    <description>Ensures that if an account number is set that it conforms to the hubwise formatting rules</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
!ISBLANK(FinServ__FinancialAccountNumber__c) &amp;&amp;
!REGEX(FinServ__FinancialAccountNumber__c, &quot;^CP[A-Za-z0-9]{9}$&quot;)</errorConditionFormula>
    <errorDisplayField>FinServ__FinancialAccountNumber__c</errorDisplayField>
    <errorMessage>Please enter the account / policy number in the format &apos;CP#########&apos;</errorMessage>
</ValidationRule>