force-app/main/default/objects/FinServ__FinancialAccount__c/validationRules/Add_Person_Account_IO_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Person_Account_IO_ID</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
(IF(ISBLANK(FinServ__JointOwner__c),
AND(
NOT(ISBLANK(IO_Plan_ID__c)), 
ISBLANK(FinServ__PrimaryOwner__r.Intelligent_Office_ID__c)
)

, 

AND(
NOT(ISBLANK(IO_Plan_ID__c)), 
OR(
ISBLANK(FinServ__PrimaryOwner__r.Intelligent_Office_ID__c), 
ISBLANK(FinServ__JointOwner__r.Intelligent_Office_ID__c) 
)
)
))
&amp;&amp;
NOT( $Permission.ValidationBypass )</errorConditionFormula>
    <errorMessage>You need to add the Person Account IO ID&#39;s for ALL owners before adding the IO ID.</errorMessage>
</ValidationRule>