force-app/main/default/objects/FinServ__FinancialAccount__c/validationRules/CannotUpdateCashAccountTypes.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotUpdateCashAccountTypes</fullName>
    <active>true</active>
    <description>Prevent updating of cash account financial products since these have moved to CheerIO.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
((RecordType.DeveloperName = &apos;SavingsAccount&apos;
||
RecordType.DeveloperName = &#39;FP_Current_Account&#39;
||
RecordType.DeveloperName = &#39;Premium_Bond&#39;
||
RecordType.DeveloperName = &#39;Offset_Mortgage_Cash_Account&#39;
||
RecordType.DeveloperName = &#39;FP_Fixed_Term_Deposit&#39;))
&amp;&amp;
NOT( $Permission.ValidationBypass )</errorConditionFormula>
    <errorMessage>You can no longer update cash accounts from here. Please use the migrated CheerIO version of this.</errorMessage>
</ValidationRule>