force-app/main/default/objects/FinServ__FinancialAccount__c/validationRules/EmploymentLinkedFirst.validationRule-meta.xml
<ValidationRule>
    <fullName>EmploymentLinkedFirst</fullName>
    <active>true</active>
    <description>Ensures that if the FF FP record to which this is linked is meant to have a linked employment, this is linked first.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
NOT(ISBLANK( OW_latest_update__c ))
&amp;&amp;
NOT(ISBLANK( OW_latest_update__r.OW_employment_match_id__c ))
&amp;&amp;
ISBLANK( OW_latest_update__r.OW_pension_employment__c )
&amp;&amp;
ISBLANK( OW_employment__c )
&amp;&amp;
NOT(ISCHANGED( OW_stop_internal_change_processing__c ))</errorConditionFormula>
    <errorMessage>This pension is linked to an employment record. Please ensure this is validated first. If this is the case, raise an issue.</errorMessage>
</ValidationRule>