force-app/main/default/objects/FinServ__FinancialAccount__c/validationRules/FF_Validations_outstanding.validationRule-meta.xml
<ValidationRule>
    <fullName>FF_Validations_outstanding</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Household__r.Fact_Find_Validations_Outstanding__c = true, 
NOT(ISNEW()), 
NOT(ISCHANGED( Stop_Internal_User_Update__c))
)</errorConditionFormula>
    <errorMessage>There are Client Profile Updates that need to be validated before you can edit this record</errorMessage>
</ValidationRule>